# transcribe-videos

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  trs-gui.iss  trs-gui.spec
.github/workflows/: release.yml
gui/: app.py  main.py  worker.py
transcribe_yt/: captions.py  cli.py  formats.py  whisper.py
