[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-yt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.1.1",
    "faster-whisper>=1.0",
]

[project.scripts]
trs = "transcribe_yt.cli:app"
